# courses-management

./: .env  .gitignore  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6b0b5f001af5_add_created_at_to_user_course.py  e2a186dbb039_add_created_at_to_users.py
app/: alembic.ini  celery_app.py  database.py  dependencies.py  email_utils.py  main.py  models.py  schemas.py  tasks.py
app/middlewares/: cors.py  execution_time.py
app/routers/: auth.py  courses.py  users.py  websockets.py
tests/: conftest.py  email_patch.py  test_courses.py
